Overflow scroll fixed in app.css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,4 +104,6 @@
 .emailbtn{
 	width:100%;
 }
-
+.off-canvas-wrap {
+	overflow:scroll;
+}
